--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aashish</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" href="icon.png">
     <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Merienda&display=swap" rel="stylesheet">    
   <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="this is cloud">
+        <img class="top-cloud" src="cloud.png" alt="this is cloud">
         <h1 class="head">I'm Aashish Waghmare.</h1>
         <h2 class="abt">A web designer.</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="this is cloud"> 
-        <img class='mountain' src="images/mountain.png" alt="this is mountain">
+        <img class="bottom-cloud" src="cloud.png" alt="this is cloud"> 
+        <img class='mountain' src="mountain.png" alt="this is mountain">
     </div> <br>
     <hr>
     <div class="middle-container">
         <div class="profile">
-          <img class="pic" src="images/me1 (2)-modified.png" alt="Aashish Waghmare">
+          <img class="pic" src="me1 (2)-modified.png" alt="Aashish Waghmare">
           <h2>Hello.</h2>
           <p>I'm an undergraduate from IIT Jodhpur in Mechanical Engineering.</p>
         </div> <br>
